<resources>
    <string name="app_name">IT Blog</string>

    <!-- Strings related to login -->
    <string name="name">Name</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="registre">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="erroSenha">User or password not found</string>
    <string name="dbclick">Click one more time to close the app</string>
    <string name="nda">You have 0 articles</string>
    <string name="title_home">All Articles</string>
    <string name="title_dashboard">Publish</string>
    <string name="title_notifications">Your Articles</string>
    <string name="title">Title</string>
    <string name="usr">Log out</string>
    <string name="wtd">What you gone do?</string>
    <string name="del">Delete</string>
    <string name="up">Update</string>
    <string name="required">All fields can not be empty</string>
    <string name="inserted">Inserted</string>
    <string name="finished">Search has been finish</string>
    <string name="updated">Updated!!</string>
    <string name="deleted">Deleted!!</string>
    <string name="tente">Try again later!!</string>
    <string name="dono">Owner</string>
    <string name="art">Article</string>
    <string name="pub">Publish</string>
    <string name="title_activity_first">Blog TI</string>
</resources>
