<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:enabled="true"
        android:actionLayout="@layout/activity_main"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:actionLayout="@layout/publish"
        android:icon="@drawable/ic_comment_black_24dp"
        android:enabled="true"
        android:title="@string/title_dashboard" />

    <item
        android:enabled="true"
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:enabled="true"
        android:id="@+id/user"
        android:icon="@drawable/off"
        android:title="@string/usr" />

</menu>