<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:labelFor="@+id/title"/>
            <EditText
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dono"
                android:labelFor="@+id/dono"/>
            <EditText
                android:id="@+id/dono1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:enabled="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/art"
                android:labelFor="@+id/article"/>
            <EditText
                android:id="@+id/article1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                />
            <Button
                android:id="@+id/btPublish1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="100dp"
                android:text="@string/pub"
                 />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
