<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.yanccprogramador.blogti.MainActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="39dp"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/btPublish" />

    <EditText
        android:id="@+id/dono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dono"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="124dp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:editable="false"/>

        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btPublish"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="58dp">
    <EditText
        android:id="@+id/article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/art"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="238dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="68dp"
        />
     </LinearLayout>
     </ScrollView>
    <Button
        android:id="@+id/btPublish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:text="@string/pub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/nav" />
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />


</android.support.constraint.ConstraintLayout>